# attrutil

./: CMakeLists.txt  LICENSE  README.md  attrutil.c  test.sh
.github/workflows/: build.yml
